--- a/FlutterApp.Server.Host/FlutterApp.Server.Host.csproj
+++ b/FlutterApp.Server.Host/FlutterApp.Server.Host.csproj
@@ -15,8 +15,10 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\FlutterApp.Server.Client.Codec\FlutterApp.Server.Client.Codec.csproj" />
       <ProjectReference Include="..\FlutterApp.Server.Client\FlutterApp.Server.Client.csproj" />
       <ProjectReference Include="..\FlutterApp.Server.Database\FlutterApp.Server.Database.csproj" />
+      <ProjectReference Include="..\FlutterApp.Server.Utils\FlutterApp.Server.Utils.csproj" />
     </ItemGroup>
 
 </Project>
