[+] New package: AxLink.Service [+] Firebase user and Provider

--- a/FlutterApp.Server.Host/FlutterApp.Server.Host.csproj
+++ b/FlutterApp.Server.Host/FlutterApp.Server.Host.csproj
@@ -15,6 +15,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\AxLink.Service\AxLink.Service.csproj" />
       <ProjectReference Include="..\FlutterApp.Server.Client.Codec\FlutterApp.Server.Client.Codec.csproj" />
       <ProjectReference Include="..\FlutterApp.Server.Client\FlutterApp.Server.Client.csproj" />
       <ProjectReference Include="..\FlutterApp.Server.Database\FlutterApp.Server.Database.csproj" />
