--- a/FlutterApp.Server.Host/appsettings.example.json
+++ b/FlutterApp.Server.Host/appsettings.example.json
@@ -8,5 +8,8 @@
   "ConnectionStrings": {
     "PostgreSqlConnection": "User ID=postgres;Password=___;Host=localhost;Port=____;Database=____;Pooling=true;"
   },
+  "Firebase": {
+    "AdminConfigPath" : "/../____.json"
+  },
   "AllowedHosts": "*"
 }
